--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,4 +1,4 @@
-:root{
+/* :root{
     --body_background_color: #E1E5EE;
     --header-background_color: #2A324B;
     --header-color: #fff;
@@ -9,39 +9,98 @@
 body{
     background-color: var(--body_background_color);
 }
+.container{
+    width: 90%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+}
 
-
-nav #knp-section{
+#knp-section{
     display: flex;
     justify-content: space-between;
     gap: 1rem;
     list-style: none;
+    
+} 
+.knpp-section{
+    text-decoration: none;
+    padding: 10px 20px;
+    background: #222;
+    color: white;
     cursor: pointer;
-    li{
-        font-size: 1.2rem;
-        
-        color: var(--header-color);
-        padding:  5px;
-        background-color: var(--header-background_color);
-        color: #fff;
+    border-radius: 5px;
+    &:focus{
+        background-color: #cab9b9;
+        color: white;
     }
 
-} 
-
-.innhold{
-    margin: 80px;
-    background-color: #fff;
-    padding: 0px 15px 10px;
 
 }
-.knp-section{
+li:focus{
+
+    background-color: #cab9b9;
+    color: white;
+
+} */
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #e9edf5;
     display: flex;
     justify-content: center;
-    gap: 2rem;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    align-items: center;
+    height: 100vh;
+}
+.container {
+    width: 800px;
+    height: 400px;
+    background-color: white;
     
-   
+
     
 }
+nav ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+    margin: 0;
+    
+    background-color: #e9edf5;
+}
+nav ul li {
+    padding: 10px 35px;
+    background-color: #2c3550;
+    color: white;
+    cursor: pointer;
+    
+    font-weight: bold;
+}
+nav ul li.active {
+    background-color: white;
+    color: black;
+}
+
+article {
+    padding: 20px;
+}
+h2 {
+    font-size: 24px;
+}
+ul {
+    padding-left: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+  
+ 
